welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:3: error: illegal start of simple pattern
  for (val <- nums) {
           ^averageValue:7: error: val in for comprehension must be followed by assignment
} 
^averageValue:7: error: '<-' expected but '}' found.
} 
^