welcome.lessons.welcome.array.search.AverageValue.scala.code
def averageValue(nums:Array[Int]): Int = {
  var somme:Int = 0
  for (val <- nums) {
    somme += val
  }
  return somme/(nums.length)
}